--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/vicentegonz/integracion2#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.2",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
